--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
   background-image: url("./assets/BG.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
   font-family: Blender;
   overflow: hidden;
   margin: 0;
@@ -92,18 +92,55 @@ body{
 }
 
 #dialogueBox{
-  position: absolute;
-  top: 50%;
-  right: 5%;
-  transform: translateY(-50%);
+  position: relative;
+  top: 0%;
+  right: 0%;
   width: 30vw;
   height: 39.5vw;
   background-image: url("./Assets/dialogue-box.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  overflow-y: auto;
   box-shadow: 0 0 30px 3px rgba(255, 255, 255, 0.3);
+  transition: 1s;
+}
+
+#textHolder{
+  position: relative;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 90%;
+  height: 90%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#textHolder::-webkit-scrollbar-track {
+  background-color: gray;
+  opacity: 0;
+}
+
+#textHolder::-webkit-scrollbar {
+  width: 3px;
+  background-color: gray;
+  height: 80%;
+}
+
+#textHolder::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  box-shadow: 0 0 30px 3px rgba(255, 255, 255, 0.3);
+}
+
+#dialogueBoxHolder{
+  position: absolute;
+  top: 50%;
+  right: -10%;
+  width: 30vw;
+  height: 0vw;
+  transform: translate(-50%,-50%);
+  overflow:hidden;
+  transition: 1s;
 }
 
 #selfDialogue{
@@ -140,6 +177,8 @@ body{
   transform: translate(-50%,-50%);
   border: 1px solid white;
   border-radius: 5px;
+  color: black;
+  background-color: rgba(255, 255, 255, 50);
 }
 
 #introductionButton{
@@ -176,7 +215,160 @@ body{
   transform: translate(-50%,-50%);
 }
 
+#loading{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  transition: .5s;
+  transform: translate(-50%,-50%);
+}
+
+#loading1{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 25%;
+  width: 25%;
+  opacity: 0;
+  transform: translate(-50%,-50%);
+  background-image: url('./Assets/Loading/Logo.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 1s;
+}
+
+#loading2{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 10%;
+  width: 10%;
+  transform: translate(-50%,-50%);
+  background-image: url('./Assets/Loading/blue_dot.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 1s;
+}
+
+#pLoading{
+  position: absolute;
+  top: 53%;
+  color: white;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 30px;
+  transition: 1s;
+  text-shadow: 0 0 10px #fff;
+}
+
+#continueButtonCenter{
+  position: absolute;
+  left: 50%;
+  top: 80%;
+  transform: translate(-50%,-50%);
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+#appearingText{
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%,-50%);
+  width: 70%;
+  color: white;
+  font-size: 30px;
+  text-shadow: 0 0 10px #fff;
+  text-align: center;
+  opacity: 0;
+  transition: .5s;
+}
+
+#appearingVideo{
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 1;
+  z-index: 2;
+  transition: 1s;
+}
+
+#videobackground{
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 1;
+  z-index: 1;
+}
+
+#video{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width:100%;
+  height:auto;
+  z-index:-1;
+  min-height: 100vh;
+  opacity: 1;
+  transition: 1s;
+}
+
+#videoContainer{
+  position: absolute;
+  width: 0%;
+  height: 0%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  filter: blur(4px);
+  overflow:hidden;
+}
+
+.loadAnimation{
+  animation: loading_animation 1s linear infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.loadAnimation2{
+  animation: glow 1s linear infinite alternate;
+  animation-timing-function: ease-in-out;
+}
+
+.turnOn{
+  animation: turnOn 1.5s linear;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
 @keyframes totems_animation {
   from {top: 30%;}
   to {top: 35%;}
+}
+
+@keyframes loading_animation {
+  from {transform: translate(-50%,-50%) rotate(0deg);}
+  to {transform: translate(-50%,-50%) rotate(360deg);}
+}
+
+@keyframes glow {
+  from {text-shadow: 0 0 10px #fff;}
+  to {text-shadow: 0 0 20px #fff;}
+}
+
+@keyframes turnOn {
+  0% {height: 0%; width: 0%; filter: blur(4px);}
+  30% {height: .5%; width: 100%; filter: blur(2px);}
+  70% {height: 100%; width: 100%; filter: blur(1px);}
+  100% {height: 100%; width: 100%; filter: blur(0px);}
 }
