--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-  background-image: url("./assets/BG.jpg");
+  background-image: url("./Assets/BG.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
